--- a/app_/views/about/index.ejs
+++ b/app_/views/about/index.ejs
@@ -9,22 +9,88 @@
   <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
     <%- include('../layouts/header_menu.ejs') %>
     <div class="">
-      <form action="about" method="post" class="px-5 lg:px-10 py-5 my-10 grid items-center justify-center gap-2 grid-cols-1 md:grid-cols-3 box-border bg-gray-300 rounded-lg font-mono max-w-[90%] mx-auto">
+      <form action="about" method="post" class="px-5 lg:px-10 py-5 my-10 grid items-center justify-center gap-2 grid-cols-1 md:grid-cols-2 box-border bg-gray-300 rounded-lg font-mono max-w-[90%] mx-auto">
         <p class="hidden">
           <input type="text" name="token" id="token" value="<%= admin.token %>">
         </p>
         <div class="text-center">
           <img class="w-full" src="<%= admin.profile.about.icon %>" id="icon_" alt="icon_">
-          <input value="<%= admin.profile.about.icon %>" onchange="icon_.src = this.value" type="text" name="icon" class="py-1 px-2 my-4 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" placeholder="illustration icon" required>
+          <input value="<%= admin.profile.about.icon %>" onchange="icon_.src = this.value" type="text" name="icon" class="py-1 px-2 my-4 w-full outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" placeholder="illustration icon" required>
         </div>
         <div  class="text-center">
-          <textarea name="content" rows="10" class="py-1 px-2 outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" placeholder="About me" required> <%= admin.profile.about.content %> </textarea>
+          <textarea name="content" rows="10" class="py-1 px-2 w-full h-full outline-none bg-transparent ring-1 focus:ring-2 rounded-lg" placeholder="About me" required> <%= admin.profile.about.content %> </textarea>
         </div>
-        <p  class="text-center">
+        <p  class="text-right col-span-1 md:col-span-2">
           <button class="py-2 px-5 border-2 border-green-700 hover:bg-green-700 text-xl text-green-600 hover:text-white rounded-md">Save Changes</button>
         </p>
       </form>
     </div>
-
+    <div x-data="{ show: false }" class="bg-gray-900 py-5">
+      <h1 class="text-center text-white text-2xl font-light my-4">Occupations</h1>
+      <button x-show="!show" @click=" show = true " class="border-2 m-5 py-2 px-4 rounded-lg text-gray-600 border-gray-600 mt-4 hover:border-gray-400 focus:border-gray-400 hover:text-gray-400 focus:text-gray-400">New Occupation</button>
+      <div x-show="!show" class="flex items-center justify-around gap-4 flex-wrap px-5 py-10">
+        <% if (occupations.length == 0) { %>
+          <p class="text-2xl font-light text-red-500">No occupations found!</p>
+        <% } else { %>
+          <% occupations.forEach((occupation, i) => { %>
+            <div class="bg-gray-700 text-gray-100 p-4 rounded-lg">
+              <form action="about/occupation_update" method="post">
+                <p class="hidden">
+                  <input type="text" value="<%= admin.token %>" name="token" id="token" required>
+                </p>
+                <p class="hidden">
+                  <input type="text" value="<%= occupation._id %>" name="id" id="id" required>
+                </p>
+                <p class="flex items-center justify-center">
+                  <img id="icon_occupation_<%= i %>" src="<%= occupation.icon %>" alt="icon_occupation_<%= i %>" class="size-28 rounded-full p-2 border-2 border-white m-2">
+                </p>
+                <p>
+                  <input onchange="document.getElementById('icon_occupation_<%= i %>').src = this.value" value="<%= occupation.icon %>" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="icon" placeholder="Icon url" required>
+                </p>
+                <p>
+                  <input value="<%= occupation.name %>" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
+                </p>
+                <p>
+                  <textarea class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="details" id="details" placeholder="Details" required> <%= occupation.details %> </textarea>
+                </p>
+                <p>
+                  <button class="border-2 py-2 w-full my-2 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Save</button>
+                </p>
+              </form>
+              <form class="w-full mt-4 my-2" action="about/occupation_delete" method="post">
+                <p class="hidden">
+                  <input type="text" name="token" value="<%= admin.token %>">
+                  <input type="text" name="id" value="<%= occupation._id %>">
+                </p>
+                <button class="border-2 w-full py-2 px-4 rounded-lg text-red-300 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Delete</button>
+              </form>
+            </div>
+          <% }) %>
+        <% } %>
+      </div>
+      <div x-show="show" class="flex items-center justify-center px-5 py-10">
+        <form action="about/new_occupation" method="post" class="px-10 py-5 rounded-lg bg-gray-800 text-white">
+          <p class="hidden">
+            <input type="text" value="<%= admin.token %>" name="token" id="token" required>
+          </p>
+          <p class="flex items-center justify-center">
+            <img src="" id="icon_occupation" alt="icon_occupation" class="size-28 rounded-full p-2 border-2 border-white m-2">
+          </p>
+          <p>
+            <input onchange="icon_occupation.src = this.value" class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="icon" id="icon" placeholder="Icon url" required>
+          </p>
+          <p>
+            <input class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="name" id="name" placeholder="Name" required>
+          </p>
+          <p>
+            <textarea class="bg-transparent w-full px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-2 ring-gray-500 outline-none" type="text" name="details" id="details" placeholder="Details" required></textarea>
+          </p>
+          <p class="flex gap-4 flex-wrap items-center justify-center">
+            <button @click=" show = false " type="button" class="border-2 w-[45%] max-w-full py-2 px-4 rounded-lg text-red-300 mt-4 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Cancel</button>
+            <button type="submit" class="border-2 py-2 w-[45%] max-w-full px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Add</button>
+          </p>
+        </form>
+      </div>
+    </div>
 </body>
 </html>
