--- a/app_/views/admin/dashboard.ejs
+++ b/app_/views/admin/dashboard.ejs
@@ -9,7 +9,9 @@
 <body x-data="{ dark: true }" x-bind:class="dark?'dark':'light'">
     <%- include('../layouts/header_menu.ejs') %>
 
-    <h1>ADMIN DASHBOARD</h1>
+    <div class="mt-2 h-[1000px]">
+      <iframe class="w-full h-full" src="../../profile" frameborder="0"></iframe>
+    </div>
 
 </body>
 </html>
