--- a/app_/views/experience/index.ejs
+++ b/app_/views/experience/index.ejs
@@ -152,7 +152,49 @@
       </div>
       <div class="bg-gray-900">
         <h1 class="text-center text-white text-2xl font-light my-4">Reviews</h1>
-        
+        <div class="flex items-center justify-around gap-4 flex-wrap px-5 py-10">
+          <% if (reviews.length == 0) { %>
+            <p class="text-2xl font-light text-red-500">No reviews found!</p>
+          <% } else { %>
+            <% reviews.forEach(review => { %>
+              <div  class="bg-gray-700 text-gray-100 px-4 py-5 mx-10 w-full rounded-lg">
+                <input type="text" name="id" value="<%= review._id %>" class="hidden" required>
+                <p class="flex items-center justify-center">
+                  <img src="data:<%= review.client.photo.tipo %>;base64,<%= review.client.photo.data %>" alt="client_photo" id="client_photo" class="size-32 rounded-full p-1 border-2 border-white m-2">
+                </p>
+                <p>
+                    <input value="<%= review.client.name %>" class="bg-transparent w-[80%] mx-auto block px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-3 ring-gray-500 outline-none" type="text" name="name" id="name" placeholder="Your full name" readonly
+                </p>
+                <p>
+                    <input value="<%= review.client.email %>" class="bg-transparent w-[80%] mx-auto block px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-3 ring-gray-500 outline-none" type="email" name="email" id="email" placeholder="Your email" readonly
+                </p>
+                <p>
+                    <textarea class="bg-transparent w-[80%] mx-auto block px-2 py-1 text-center ring-1 focus:ring-gray-300 focus:ring-2 rounded-md my-3 ring-gray-500 outline-none" name="content" id="content" rows="10" placeholder="Type your review here..." readonly> <%= review.content %> </textarea>
+                </p>
+                <p>
+                    <% if (review.status == 1) { %>
+                      <form action="experiences/review_delete" method="post">
+                        <input type="text" name="id" value="<%= review._id %>" class="hidden" required>
+                        <input type="text" name="token" value="<%= token %>" class="hidden" required>
+                        <button class="border-2 w-[80%] py-2 mx-auto block my4 px-4 rounded-lg text-red-300 mt-4 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Delete</button>
+                      </form>
+                    <% } else { %>
+                      <form action="experiences/review_delete" method="post">
+                        <input type="text" name="token" value="<%= token %>" class="hidden" required>
+                        <input type="text" name="id" value="<%= review._id %>" class="hidden" required>
+                        <button class="border-2 w-[80%] py-2 mx-auto block my4 px-4 rounded-lg text-red-300 mt-4 border-red-300 hover:border-red-500 focus:border-red-500 hover:text-red-500 focus:text-red-500">Decline</button>
+                      </form>
+                      <form action="experiences/review_update" method="post">
+                        <input type="text" name="token" value="<%= token %>" class="hidden" required>
+                        <input type="text" name="id" value="<%= review._id %>" class="hidden" required>
+                        <button class="border-2 w-[80%] py-2 mx-auto block my4 px-4 rounded-lg text-green-300 mt-4 border-green-300 hover:border-green-500 focus:border-green-500 hover:text-green-500 focus:text-green-500">Accept</button>
+                      </form>
+                    <% } %>
+                </p>
+              </div>
+            <% }) %>
+          <% } %>
+      </div>
       </div>
     </div>
     
