--- a/app_/views/review/form.ejs
+++ b/app_/views/review/form.ejs
@@ -19,7 +19,7 @@
             <form action="../review/new" method="post" enctype="multipart/form-data"  class="bg-gray-700 text-gray-100 p-4 max-w-80 sm:rounded-lg">
                 <p class="flex items-center justify-center">
                     <abbr title="Click to select your photo"><label class="flex items-center justify-center" for="photo">
-                        <img src="" alt="client_photo" id="client_photo" class="size-28 rounded-full p-1 border-2 border-white m-2">
+                        <img src="https://t4.ftcdn.net/jpg/05/12/92/75/360_F_512927508_PZ2iPUoEAujYI12gos7znbGX1j407Mul.jpg" alt="client_photo" id="client_photo" class="size-28 rounded-full p-1 border-2 border-white m-2">
                         <input class="w-1 h-1 opacity-0" type="file" name="photo" id="photo" required>
                     </label></abbr>
                 </p>
@@ -54,7 +54,7 @@
                 reader.readAsDataURL(files[0])
 
             }else{
-                document.getElementById('client_photo').src = ""
+                document.getElementById('client_photo').src = "https://t4.ftcdn.net/jpg/05/12/92/75/360_F_512927508_PZ2iPUoEAujYI12gos7znbGX1j407Mul.jpg"
             }
         })
     </script>
