--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -224,7 +224,7 @@
           <h1 class="text-4xl py-6 text-center"> <%= admin.navigation.sections[2] %> </h1>
           <div>
             
-            <div class="flex flex-wrap items-center gap-4">
+            <div class="flex flex-wrap items-center justify-around gap-4">
               <% skills.forEach((skill, i) => { %>
                 <div style="width: 30%;" class="py-4">
                   <h1 class="text-lg pl-3 py-3"> <%= skill.name %> </h1>
