--- a/app_/views/portofolio.ejs
+++ b/app_/views/portofolio.ejs
@@ -264,7 +264,7 @@
               <% projects.forEach(project => { %>
                 <div class="bg-transparent border-2 border-gray-600 dark:border-gray-500 rounded-lg py-4 px-16 my-4">
                   <div class="flex gap-3 items-center">
-                    <img class="size-10" src="<%= project.logo %>" alt="pronote-logo">
+                    <img class="size-10 rounded-full p-1 border-2" src="<%= project.logo %>" alt="pronote-logo">
                     <h1 class="text-3xl font-light"> <%= project.name %> </h1>
                   </div>
                   <div class="flex items-center justify-center">
