--- a/app_/views/review/form.ejs
+++ b/app_/views/review/form.ejs
@@ -20,7 +20,7 @@
                 <p class="flex items-center justify-center">
                     <abbr title="Click to select your photo"><label class="flex items-center justify-center" for="photo">
                         <img src="https://t4.ftcdn.net/jpg/05/12/92/75/360_F_512927508_PZ2iPUoEAujYI12gos7znbGX1j407Mul.jpg" alt="client_photo" id="client_photo" class="size-28 rounded-full p-1 border-2 border-white m-2">
-                        <input class="w-1 h-1 opacity-0" type="file" name="photo" id="photo" required>
+                        <input class="w-1 h-1 opacity-0" type="file" name="photo" id="photo" accept=".png" required>
                     </label></abbr>
                 </p>
                 <div class="grid grid-cols-2 gap-4">
